# multi-modal-rag-bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py  streamlit_app.py
app/api/endpoints/: __init__.py  rag.py
app/config/: ai.py  base.py  chroma.py  config.py  streamlit.py
app/enums/: __init__.py  prompts.py
app/schemas/: __init__.py  rag.py  state.py
app/services/: __init__.py  rag.py
app/utils/: crawl_data.py
tests/: conftest.py  test_rag.py
